# Yuri

./: .gitignore  Cargo.toml  Makefile  README.md  compile_flags.txt  flake.nix  yuri.dts
includes/: remu.h
src/: cpu.rs  csr.rs  csrs.rs  hart.rs  main.rs  memory.rs  mmu.rs  register.rs  remu.c  syscall.rs  trap.rs  utils.rs
src/csrs/: mod.rs
src/devices/: aclint.rs  bus.rs  device.rs  memory.rs  mod.rs  plic.rs  uart.rs  ysyx.rs
src/instructions/: b.rs  i.rs  j.rs  mod.rs  r.rs  s.rs  types.rs  u.rs
src/instructions/extensions/: a.rs  c.rs  d.rs  f.rs  i.rs  m.rs  mod.rs  sm.rs  zicsr.rs  zifenci.rs
src/utils/: channel.rs  mod.rs
