[package]
name = "yuri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
elf = "0.7.2"
once_cell = "1.18.0"

[dependencies.softfloat-wrapper]
version = "0.3.4"
default-features = false
features = ["riscv"]
